# sombrax_agentic_core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: hook_bench.rs
examples/: README.md  basic_agent.rs  cross_agent.rs  debate_judge.rs  guardrail_hook.rs  mcp_tools.rs  panel_discussion.rs  react_tool_agent.rs  research_pipeline.rs  supervised_loop.rs
examples/common/: mod.rs
examples/skills/hello-world/: SKILL.md  greetings.txt  weather.md
src/: error.rs  lib.rs  prelude.rs  retry.rs  telemetry.rs
src/agent/: completion.rs  mod.rs  registry.rs  wrapper.rs
src/context/: mod.rs  optimizer.rs
src/context/classification/: edge_cases.rs  hook.rs  mod.rs  test_transcripts.rs
src/experience/: mod.rs  store.rs  types.rs
src/extractor/: builder.rs  mod.rs  wrapper.rs
src/hook/: context.rs  mod.rs
src/hook/builtin/: mod.rs
src/message/: mod.rs
src/prompt/: discovery.rs  error.rs  mod.rs
src/provider/: mod.rs  obfuscate.rs
src/providers/: adapter.rs  builder.rs  config.rs  error.rs  http.rs  mod.rs  provider_type.rs
src/providers/anthropic/: client.rs  mod.rs  types.rs
src/providers/cerebras/: client.rs  mod.rs  types.rs
src/providers/lmstudio/: client.rs  mod.rs  types.rs
src/providers/minimax/: client.rs  mod.rs  types.rs
src/providers/mlxlm/: client.rs  mod.rs  types.rs
src/providers/ollama/: client.rs  mod.rs  types.rs
src/providers/openai/: client.rs  mod.rs  types.rs
src/providers/openrouter/: client.rs  mod.rs  routing.rs  types.rs
src/providers/zai/: client.rs  mod.rs  types.rs
src/runs/: error.rs  handler.rs  log.rs  mod.rs  model.rs  pipeline.rs  registry.rs  runtime.rs  subprocess.rs
src/runs/store/: contract_tests.rs  event.rs  memory.rs  mod.rs
src/runs/worker/: cancel_sweep.rs  dispatcher.rs  mod.rs  orphan.rs
src/skill/: discovery.rs  error.rs  mod.rs
src/tool/: mcp.rs  mcp_stdio.rs  mod.rs  server.rs
src/tools/: context.rs  error.rs  mod.rs  registry.rs  resolver.rs  serde_flexible.rs
src/tools/agent/: mod.rs  runtime.rs  task.rs  todo.rs
src/tools/file/: edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/tools/shell/: bash.rs  command_utils.rs  mod.rs  safety.rs
src/tools/skill/: mod.rs
src/tools/web/: env_expand.rs  fetch.rs  mod.rs
tests/: integration.rs  prompt_registry.rs  providers.rs  runs_concurrency.rs  runs_runtime.rs  runs_subprocess.rs  skill.rs  tools.rs  unit.rs
tests/integration/: agent_workflow_test.rs  mcp_integration_test.rs
tests/providers/integration/: anthropic_integration_test.rs  cerebras_integration_test.rs  minimax_integration_test.rs  mod.rs  openrouter_integration_test.rs  zai_integration_test.rs
tests/providers/unit/: anthropic_test.rs  cerebras_test.rs  minimax_test.rs  mod.rs  openai_test.rs  openrouter_test.rs  openrouter_xml_parsing_test.rs  zai_test.rs
tests/skill/: discovery.rs  mod.rs  parsing.rs  tool.rs
tests/tools/integration/: bash_timeout_test.rs  fetch_integration_test.rs  mod.rs  todo_session_test.rs  workspace_boundary_test.rs
tests/tools/unit/: bash_test.rs  context_test.rs  edit_test.rs  fetch_test.rs  glob_test.rs  grep_test.rs  mod.rs  read_test.rs  safety_test.rs  schema_test.rs  task_test.rs  todo_read_test.rs  todo_write_test.rs  write_test.rs
tests/unit/: context_test.rs  hook_chain_test.rs  message_test.rs  tool_test.rs
